# gemini-simple

./: .gitignore  README.md  aiml24-gemini.yml  example_service_acc_key.json  pyproject.toml
notebooks/: api.ipynb  prompting.ipynb
