[tool.poetry]
name = "gemini"
version = "0.1.0"
description = ""
authors = ["nicolai <nicolaibthomsen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
google-generativeai = "^0.3.2"
python-decouple = "^3.8"
google-cloud-aiplatform = "^1.42.1"
gcloud = "^0.18.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
